mirrord/manifests-app/manifests-k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-python
  template:
    metadata:
      labels:
        app: http-python
    spec:
      containers:
        - name: http-python
          image: ghcr.io/valkiriaaquatica/http-python:0.0.1
          ports:
            - containerPort: 8080
