mirrord/manifests-app/manifests-k8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-python-service
spec:
  selector:
    app: http-python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
