mirrord/manifests-app/manifests-k8/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-python-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: http-python.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-python-service
            port:
              number: 80
